Правки по разметке
Внесла правки по замечаниям в разметке catalog.html и catalog-item.html

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">Магазин
+                        <a href="catalog.html">Магазин
                         </a>
                     </li>
                     <li>
@@ -48,11 +48,11 @@
         <div class="breadcrumbs">
             <ul>
                 <li>
-                    <a href="#">Главная
+                    <a href="index.html">Главная
                     </a>
                 </li>
                 <li>
-                    <a href="#">Магазин
+                    <a href="catalog.html">Магазин
                     </a>
                 </li>
                 <li>
@@ -93,7 +93,7 @@
                     <div class="item-buying">
                         <span class="item-buying-price">2900 руб.
                         </span>
-                        <a class="item-buying-cart" href="#">Купить
+                        <button class="item-buying-cart" type="submit">Купить</button>
                         </a>
                     </div>
                 </div>
