--- a/catalog.html
+++ b/catalog.html
@@ -43,15 +43,15 @@
     </header>
     <main class="container">
         <h1 class="catalog-title">Средства для ухода
-	 </h1>
+	     </h1>
         <div class="breadcrumbs">
             <ul>
                 <li>
-                    <a href="#">Главная
+                    <a href="index.html">Главная
                     </a>
                 </li>
                 <li>
-                    <a class="" href="#">Магазин
+                    <a href="catalog.html">Магазин
                     </a>
                 </li>
                 <li>
@@ -89,26 +89,27 @@
                         <label><input type="radio" name="item-type" id="item-accessories">Аксессуары
                         </label>
                     </fieldset>
-                    <button type="submit">Показать
-                    </button>
+                    <button type="submit">Показать</button>
                 </form>
             </div>
 
             <div class="catalog-products column-right">
                 <article class="catalog-items-preview">
-                    <a href="#"><img src="trvlkit-cat.jpg" width="220px" height="165px" alt="Набор для путешествий">
+                    <a href="catalog-item.html"><img src="trvlkit-cat.jpg" width="220px" height="165px" alt="Набор для путешествий">
                     </a>
                     <div class="catalog-items-info">
                         <h2 class="catalog-items-title">
-                          <a href="#">Набор для путешествий <span class="item-title-brand">Baxter of California</span>
+                          <a href="catalog-item.html"><span class="item-title-name">Набор для путешествий</span>
+                            <br>
+                            <span class="item-title-brand">Baxter of California</span>
                           </a>
                         </h2>
                         <div class="product-action">
                             <div class="item-buying">
                                 <span class="item-buying-price">2900 руб.
                                 </span>
-                                <a class="item-buying-cart" href="#">Купить
-                                </a>
+                                <button class="item-buying-cart" type="submit">Купить
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -119,15 +120,17 @@
                     </a>
                     <div class="catalog-items-info">
                         <h2 class="catalog-items-title">
-                          <a href="#">Увлажняющий кондиционер <span class="item-title-brand">Baxter of California</span>
+                          <a href="#"><span class="item-title-name">Увлажняющий кондиционер</span>
+                            <br>
+                            <span class="item-title-brand">Baxter of California</span>
                           </a>
                         </h2>
                         <div class="product-action">
                             <div class="item-buying">
                                 <span class="item-buying-price">750 руб.
                                 </span>
-                                <a class="item-buying-cart" href="#">Купить
-                                </a>
+                                <button class="item-buying-cart" type="submit">Купить
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -138,15 +141,17 @@
                     </a>
                     <div class="catalog-items-info">
                         <h2 class="catalog-items-title">
-                           <a href="#">Гель для волос <span class="item-title-brand">Suavecito</span>
+                           <a href="#"><span class="item-title-name">Гель для волос</span>
+                             <br>
+                             <span class="item-title-brand">Suavecito</span>
                            </a>
                         </h2>
                         <div class="product-action">
                             <div class="item-buying">
                                 <span class="item-buying-price">290 руб.
                                 </span>
-                                <a class="item-buying-cart" href="#">Купить
-                                </a>
+                                <button class="item-buying-cart" type="submit">Купить
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -157,15 +162,17 @@
                     </a>
                     <div class="catalog-items-info">
                         <h2 class="catalog-items-title">
-                              <a href="#">Глина для укладки волос <span class="item-title-brand">American Crew</span>
+                              <a href="#"><span class="item-title-name">Глина для укладки волос</span>
+                                <br>
+                                <span class="item-title-brand">American Crew</span>
                               </a>
                             </h2>
                         <div class="product-action">
                             <div class="item-buying">
                                 <span class="item-buying-price">500 руб.
                                     </span>
-                                <a class="item-buying-cart" href="#">Купить
-                                    </a>
+                                <button class="item-buying-cart" type="submit">Купить
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -176,15 +183,17 @@
                     </a>
                     <div class="catalog-items-info">
                         <h2 class="catalog-items-title">
-                          <a href="#">Гель для волос <span class="item-title-brand">American Crew</span>
+                          <a href="#"><span class="item-title-name">Гель для волос </span>
+                            <br>
+                            <span class="item-title-brand">American Crew</span>
                         </a>
                         </h2>
                         <div class="product-action">
                             <div class="item-buying">
                                 <span class="item-buying-price">300 руб.
                                 </span>
-                                <a class="item-buying-cart" href="#">Купить
-                                </a>
+                                <button class="item-buying-cart" type="submit">Купить
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -195,21 +204,23 @@
                     </a>
                     <div class="catalog-items-info">
                         <h2 class="catalog-items-title">
-                        <a href="#">Набор для бритья <span class="item-title-brand">Baxter of California</span>
+                        <a href="#"><span class="item-title-name">Набор для бритья</span>
+                          <br>
+                          <span class="item-title-brand">Baxter of California</span>
                         </a>
                         </h2>
                         <div class="product-action">
                             <div class="item-buying">
                                 <span class="item-buying-price">3900 руб.
                                 </span>
-                                <a class="item-buying-cart" href="#">Купить
-                                </a>
+                                <button class="item-buying-cart" type="submit">Купить
+                                </button>
                             </div>
                         </div>
                     </div>
                 </article>
 
-                <div class="catalog-pages">
+                <nav class="catalog-pages">
                     <a class="catalog-pages-btn" href="#">1
                     </a>
                     <a class="catalog-pages-btn" href="#">2
@@ -218,7 +229,7 @@
                     </a>
                     <a class="catalog-pages-btn" href="#">
                     </a>
-                </div>
+                </nav>
             </div>
         </div>
     </main>
