--- a/catalog-item.html
+++ b/catalog-item.html
@@ -2,144 +2,120 @@
 <html lang="ru">
 
 <head>
-    <meta charset="utf-8">
-    <title>HTML Academy Барбершоп «Бородинский» Карточка товара </title>
-
+  <meta charset="utf-8">
+  <title>HTML Academy Барбершоп «Бородинский» Карточка товара </title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <header class="main-header">
-        <div class="container">
-            <a class="logo-header" href="#"><img src="logo.png" width="111px" height="24px" alt="">
-            </a>
-            <nav class="main-navigation">
-                <ul>
-                    <li>
-                        <a href="#">Информация
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">Новости
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">Прайс-лист
-                        </a>
-                    </li>
-                    <li>
-                        <a href="catalog.html">Магазин
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">Контакты
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="user-block">
-                <a class="login" href="#">Вход
-                </a>
-            </div>
-        </div>
-    </header>
-    <main class="container">
-        <h1 class="item-title">Набор для путешествий «Baxter of California»
+  <header class="main-header">
+    <div class="container">
+      <a class="logo-header" href="#"><img src="img/logo.png" width="111px" height="24px" alt=""></a>
+      <nav class="main-navigation">
+        <ul>
+          <li>
+            <a href="#">Информация</a>
+          </li>
+          <li>
+            <a href="#">Новости</a>
+          </li>
+          <li>
+            <a href="#">Прайс-лист</a>
+          </li>
+          <li>
+            <a href="#">Магазин</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="user-block">
+        <a class="login" href="#">Вход</a>
+      </div>
+    </div>
+  </header>
+  <main class="container">
+    <h1 class="item-title">Набор для путешествий «Baxter of California»
 	  </h1>
-        <div class="breadcrumbs">
-            <ul>
-                <li>
-                    <a href="index.html">Главная
-                    </a>
-                </li>
-                <li>
-                    <a href="catalog.html">Магазин
-                    </a>
-                </li>
-                <li>
-                    <a href="#">Средства для ухода
-                    </a>
-                </li>
-                <li>
-                    <a class="active" href="#">Набор для путешествий «Baxter of California»
-                    </a>
-                </li>
-            </ul>
+    <div class="breadcrumbs">
+      <ul>
+        <li>
+          <a href="#">Главная</a>
+        </li>
+        <li>
+          <a href="#">Магазин</a>
+        </li>
+        <li>
+          <a href="#">Средства для ухода</a>
+        </li>
+        <li>
+          <a class="active" href="#">Набор для путешествий «Baxter of California»</a>
+        </li>
+      </ul>
+    </div>
+    <div class="main-content">
+      <div class="product-gallery column-left">
+        <div class="product-gallery-pics">
+          <img src="img/bxtr-trvlkit-main.jpg" width="486px" height="524px" alt="Набор для путешествий Baxter of California">
         </div>
-        <div class="main-content">
-            <div class="product-gallery column-left">
-                <div class="product-gallery-pics">
-                    <img src="img.jpg" width="486px" height="524px" alt="Набор для путешествий Baxter of California">
-                </div>
-                <ul>
-                    <li><img src="trvlkit-pre1.jpg" width="166px" height="175px" alt="Набор для путешествий">
-                    </li>
-                    <li><img src="trvlkit-pre2.jpg" width="166px" height="175px" alt="Набор для путешествий">
-                    </li>
-                    <li><img src="trvlkit-pre3.jpg" width="166px" height="175px" alt="Набор для путешествий">
-                    </li>
-                </ul>
-            </div>
-            <div class="product-panel column-right">
-                <div class="product-panel-data">
-                    <b class="item-status">Есть в наличии
-                    </b>
-                    <p class="item-articul">Артикул: Dexter-AE
-                    </p>
-                </div>
-                <p>Travel Kit - необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья,
-                    крем после бритья, шампунь. Набор также может стать отличным подарком.
-                </p>
-                <div class="product-action">
-                    <div class="item-buying">
-                        <span class="item-buying-price">2900 руб.
-                        </span>
-                        <button class="item-buying-cart" type="submit">Купить</button>
-                        </a>
-                    </div>
-                </div>
-                <div class="item-list">
-                    <h2 class="item-list-title">В набор входят:
-                    </h2>
-                    <ul>
-                        <li>Средство для умывания 50 мл
-                        </li>
-                        <li>Увлажняющий крем 50 мл
-                        </li>
-                        <li>Крем для бритья 50 мл
-                        </li>
-                        <li>Крем после бритья, шампунь 50 мл
-                        </li>
-                        <li>Удобная кожаная косметичка
-                        </li>
-                    </ul>
-                </div>
-            </div>
+        <ul>
+          <li><img src="img/bxtr-trvlkit-pre1.jpg" width="166px" height="175px" alt="Набор для путешествий"></li>
+          <li><img src="img/bxtr-trvlkit-pre2.jpg" width="166px" height="175px" alt="Набор для путешествий"></li>
+          <li><img src="img/bxtr-trvlkit-pre3.jpg" width="166px" height="175px" alt="Набор для путешествий"></li>
+        </ul>
+      </div>
+      <div class="product-panel column-right">
+        <div class="product-panel-data">
+          <b class="item-status">Есть в наличии</b>
+          <p class="item-articul">Артикул: Dexter-AE</p>
         </div>
-    </main>
+        <p>Travel Kit - необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем
+          после бритья, шампунь. Набор также может стать отличным подарком.</p>
+        <div class="product-action">
+          <div class="item-buying">
+            <span class="item-buying-price">2900 руб.</span>
+            <button class="item-buying-cart" type="submit">Купить
+            </button>
+          </div>
+        </div>
+        <div class="item-list">
+          <h2 class="item-list-title">В набор входят:</h2>
+          <ul>
+            <li>Средство для умывания 50 мл</li>
+            <li>Увлажняющий крем 50 мл
+            </li>
+            <li>Крем для бритья 50 мл
+            </li>
+            <li>Крем после бритья, шампунь 50 мл
+            </li>
+            <li>Удобная кожаная косметичка
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </main>
 
-    <footer class="main-footer">
-        <div class="container">
-            <div class="footer-contacts">
-                <p>Барбершоп «Бородинский»<br> Адрес: г.Санкт-Петербург, Б.Конюшенная, д.19/8<br> Телефон: +7 (812) 666-02-66
-                </p>
-            </div>
-            <div class="footer-social">
-                <p>Давайте дружить!</p>
-                <a class="social-btn social-button-vk" href="#">Вконтакте
-                </a>
-                <a class="social-btn social-button-fb" href="#">Фейсбук
-                </a>
-                <a class="social-btn social-button-inst" href="#">Инстаграм
-                </a>
-            </div>
-            <div class="footer-copyright">
-                <p>Разработано:
-                    <a class="btn" href="http://htmlacademy.ru">HTML Academy
-                    </a>
-                </p>
-            </div>
-        </div>
-    </footer>
+  <footer class="main-footer">
+    <div class="container">
+      <div class="footer-contacts">
+        <p>Барбершоп «Бородинский»<br> Адрес: г.Санкт-Петербург, Б.Конюшенная, д.19/8<br> Телефон: +7 (812) 666-02-66
+        </p>
+      </div>
+      <div class="footer-social">
+        <p>Давайте дружить!</p>
+        <a class="social-btn social-button-vk" href="#">Вконтакте</a>
+        <a class="social-btn social-button-fb" href="#">Фейсбук</a>
+        <a class="social-btn social-button-inst" href="#">Инстаграм</a>
+      </div>
+      <div class="footer-copyright">
+        <p>Разработано:
+          <a class="btn" href="http://htmlacademy.ru">HTML Academy</a>
+        </p>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
